# nyrkes-backend

./: .coveragerc  .env.example  .flake8  .gitignore  LICENCE  README.md  docker-compose.local.yml  manage.py  pyproject.toml
.dev/: docker_full_clear.sh  run_clean_code.sh  run_coverage.sh  run_migrations.sh  start_local.sh
.github/: docker-compose.ci.yml
.github/workflows/: pull_request.yml
config/: asgi.py  urls.py  wsgi.py
config/django/: base.py  local.py
config/settings/: redis.conf
docker/: Dockerfile.local  postgres_entrypoint.sh
menel/: apps.py  authentication.py
menel/api/: base.py  exceptions.py  urls.py
menel/api/serializers/: token.py
menel/api/views/: test.py  token.py
menel/migrations/: 0001_initial.py  0002_organization_organizationmember_organization_members_and_more.py  0003_remove_organizationmember_user_organization_unique_and_more.py
menel/models/: __init__.py  base.py  organization.py  organizationmember.py  user.py
menel/utils/: constants.py
nyrkes/: apps.py  authentication.py  celery.py  tasks.py
nyrkes/admin/: __init__.py  organization.py  organizationmember.py  user.py
nyrkes/api/: base.py  error_codes.py  exceptions.py  urls.py
nyrkes/api/views/: test.py  token.py  user_organizations.py
nyrkes/forms/: user.py
nyrkes/migrations/: 0001_initial.py  0002_organizationmember_is_manager.py
nyrkes/models/: __init__.py  base.py  organization.py  organizationmember.py  user.py
nyrkes/utils/: converters.py
tests/: factories.py  test_authentication.py
tests/api/: test_base.py
tests/api/serializers/: test_token.py
tests/api/views/: test_token.py  test_user_organizations.py
tests/models/: test_organization.py  test_organizationmember.py  test_user.py
tests/utils/: test_converters.py
