[tool.poetry]
name = "menel"
version = "0.1.0"
description = "It is a secret!"
authors = ["Tapio Jokinen <tapio.jokinen@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
python-environ = "^0.4.54"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[black]
line-length = 119

[tool.isort]
profile = "black"
